refactor: Optional API를 사용하도록 변경